# omg-gog

./: Cargo.toml  install.sh
.claude/agents/: analyst.md  architect.md  codebase-expert.md  developer.md  discovery.md  feature-evaluator.md  functionality-analyst.md  omega-topology-architect.md  proto-architect.md  proto-auditor.md  qa.md  reviewer.md  role-auditor.md  role-creator.md  skill-creator.md  test-writer.md
.claude/commands/: workflow-audit-role.md  workflow-audit.md  workflow-bugfix.md  workflow-c2c.md  workflow-create-role.md  workflow-docs.md  workflow-functionalities.md  workflow-improve-functionality.md  workflow-new-feature.md  workflow-new.md  workflow-omega-setup.md  workflow-proto-audit.md  workflow-proto-improve.md  workflow-resume.md  workflow-sync.md  workflow-understand.md
.github/workflows/: ci.yml  release.yml
docs/: DOCS.md  developer-guide.md
docs/.workflow/: developer-progress.md  feature-evaluation.md  milestone-progress.md  (+1 more)
omega-google/: Cargo.toml  flake.nix
omg-gog/: Cargo.toml
specs/: SPECS.md  omega-google-requirements.md  omega-integration-architecture.md  omega-integration-requirements.md  runtime-requirements.md
src/: lib.rs  main.rs
tests/: appscript_test.rs  auth_test.rs  calendar_test.rs  chat_test.rs  classroom_test.rs  cli_test.rs  config_test.rs  contacts_test.rs  docs_test.rs  drive_test.rs  e2e_test.rs  forms_test.rs  gmail_test.rs  groups_test.rs  http_test.rs  keep_test.rs  output_test.rs  people_test.rs  rt_m4_handlers_test.rs  rt_m5_fileio_test.rs  sheets_test.rs  slides_test.rs  tasks_test.rs
(+321 files in other folders)
