[package]
name = "omega-google"
version = "0.4.0"
edition = "2021"
description = "Google Workspace CLI"
license = "MIT"

[[bin]]
name = "omg-gog"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
keyring = { version = "3", features = ["apple-native", "linux-native"] }
oauth2 = "4"
crossterm = "0.28"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
aes-gcm = "0.10"
jsonwebtoken = "9"
url = "2"
percent-encoding = "2"
dirs = "6"
rand = "0.8"
regex = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
mockito = "1"
assert_cmd = "2"
predicates = "3"
